Extract critical CSS for demo page

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "homepage": "https://github.com/enginoobz-projects/dynamic-ui-framework#readme",
         "devDependencies": {
                 "@interactjs/types": "^1.10.11",
-                "@types/css-font-loading-module": "0.0.6"
+                "@types/css-font-loading-module": "0.0.6",
+                "critical": "^4.0.1"
         },
         "dependencies": {
                 "@types/webfontloader": "^1.6.33"
