[Core] Rewrite dynamic scheme color w/ CSS custom property

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,11 @@
                 "allowUnusedLabels": false,
                 "alwaysStrict": true,
                 "noImplicitAny": true,
-                "noImplicitReturns": true,
+                "noImplicitReturns": false,
                 "noImplicitThis": true,
                 "noFallthroughCasesInSwitch": true,
-                "noUnusedLocals": true,
-                "noUnusedParameters": true,
+                "noUnusedLocals": false,
+                "noUnusedParameters": false,
                 "suppressExcessPropertyErrors": false,
                 "suppressImplicitAnyIndexErrors": false,
                 "strictFunctionTypes": true,
