--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
         "version": "1.0.0",
         "description": "The framework manipulates CSSStyleRule to achieve dynamic customization, defines PHP functions for component reusing and delegates layouting  to Bootstrap with supporting OOP (\"strongly-typed Bootstrap\").",
         "main": "js/DynamicUI.js",
-        "scripts": {
-                "test": "echo \"Error: no test specified\" && exit 1"
-        },
+        "scripts": {},
         "repository": {
                 "type": "git",
                 "url": "git+https://github.com/enginoobz-projects/dui.git"
