[Setup] Link with DUI DOM library using Project References

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,4 +25,11 @@
         "include": [
                 "./ts/**/*",
         ],
+        "references": [
+                {
+                        "path": "../dui-dom",
+                        // add 'prepend' if you want to include the referenced project in your output file
+                        "prepend": false,
+                }
+        ]
 }
